compiler/kernc_cli/tests/soundness/run-pass/specialization/generic_inference_uses_supertrait_object_const_and_assoc_bindings.rn
// exit: 0

trait Base[N: usize] {
    type Out;
    fn make() Out;
};

trait Derived[N: usize]: Base[N] {};

struct X {};

impl[N: usize] &X: Derived[N] {}

impl &X: Base[4] {
    type Out = i64;

    fn make() Out {
        return 7;
    }
}

impl[N: usize] &X: Base[N] {
    type Out = i32;

    fn make() Out {
        return 1;
    }
}

fn take[N: usize, T](value: &Base[N, Out = T]) T {
    return value.make();
}

fn main() i32 {
    let x = X.{};
    let value = &Derived[4].{ x.& };
    return (take(value) as i32) - 7;
}
